tried to fix the alignment on high scores

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ button:hover {
   display: flex;
   justify-content: space-around;
   border-bottom-style: outset;
+  padding-top: 2rem;
   margin-bottom: 0.5rem;
   background-color: #e0035f;
   color: #000000;
@@ -113,19 +114,20 @@ button:hover {
 }
 
 #initials {
+  float: right;
   margin: 0.5rem;
   height: 1.75rem;
 }
 
 #highscore-initials {
-  padding-left: 9.5rem;
+  padding-left: 3.5rem;
   font-family: sans-serif;
   font-weight: bold;
 }
 
 #highscore-score {
-  float: right;
-  padding-right: 8.75rem;
+  float: left;
+  padding-left: 16.5rem;
   font-family: sans-serif;
   font-weight: bold;
 }
